--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: yoshi389111/github-profile-3d-contrib@0.6.0
         env:
           GITHUB_TOKEN: ${{ secrets.TOKEN }}
-          USERNAME: ${{ gitHub.Kympy }}
+          USERNAME: ${{ gitHub.repository_owner }}
       - name: Commit & Push
         run: |
           git config user.name Kympy
